fix image display size on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -11,19 +11,6 @@ body {
   padding: 30px;
 }
 
-@media (max-width: 600px) {
-  html {
-    padding: 0px;
-    font-size: 2.2vw;
-  }
-
-  body {
-    border-radius: 0px;
-    padding: 10px;
-    margin: 0px;
-  }
-}
-
 #terminal {
   overflow-y: scroll;
   overflow-wrap: break-word;
@@ -62,4 +49,22 @@ input {
 
 img {
   margin-left: 15px;
+}
+
+@media (max-width: 600px) {
+  html {
+    padding: 0px;
+    font-size: 2.2vw;
+  }
+
+  body {
+    border-radius: 0px;
+    padding: 10px;
+    margin: 0px;
+  }
+
+  img {
+    margin-left: 3vw;
+    width: 85vw;
+  }
 }
